<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        android:text="@string/sign_in_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="325dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/email_required"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/Email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/password_required"
            android:paddingStart="10dp"
            android:password="true"
            tools:ignore="RtlSymmetry" />


        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/SignIn"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/sign_up_textview"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/SignUp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

<!-- <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    >

    <TextView
        android:id="@+id/logInPg"
        android:layout_width="84dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPg" />

    <EditText
        android:id="@+id/logInPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:layout_marginTop="45dp"
        android:text="Log In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPass" />

    <TextView
        android:id="@+id/goToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sign Up"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
-->