<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:text="@string/create_an_account"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/full_name_required"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/FullName"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/email_required"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/Email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/password_required"
            android:paddingStart="10dp"
            android:password="true"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/confirm_password_required"
            android:paddingStart="10dp"
            android:password="true"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/SignUp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/sign_in_textview"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/SignIn"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--
 <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createAcc"
            android:layout_width="159dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="87dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="left"
            android:text="Create Account"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usernameSignup"
            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_below="@+id/createAcc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="username"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_below="@+id/usernameSignup"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmPasswordSignUp"
            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_below="@+id/passwordSignUp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordSignUp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="44dp"
            android:text="SIGN UP" />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpBtn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="185dp"
            android:layout_marginTop="28dp"
            android:text="LOGIN"
            android:textColor="@color/black" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
-->